# BiciMAD-EMT

./: .gitignore  enuncuado_con_clases.ipynb  main.py  pyproject.toml
bicimad/: BiciMad.py  UrlEMT.py  __init__.py
bicimad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_BiciMad.py  test_UrlEMT.py
